--- a/Style/Stylesheet.css
+++ b/Style/Stylesheet.css
@@ -107,7 +107,7 @@ body{
     height: 100%;
     display: block;
     border-radius: 10px;
-    padding-left: 10px;
+    padding-right: 10px;
   }
   .imgContainer{
   height: 100%;
